@@ -4,7 +4,7 @@
 1.8.1 update 2 vs. 1.8.1 update 1
 
    1 Enhancement
-   2 Bugfixes
+   3 Bugfixes
 ----------------------------------------------------------------------
 1.8.1 update 2
 
@@ -19,6 +19,9 @@
 
   - The content of external TMX level 2 tags is displayed
   http://sourceforge.net/support/tracker.php?aid=1988491 
+
+  - Spellcheck: words added to dictionary lost after restart
+  http://sourceforge.net/support/tracker.php?aid=1819355  
 
 ----------------------------------------------------------------------
  OmegaT 1.8.1 update 1 Changes
